# PolynomialCalculator

./: CMakeLists.txt  Grammar.y  README.md  Scanner.l
Polynomials/: Database.h  Dictionary.h  IdentifierList.h  Monom.h  MonomArray.h  MonomBase.h  Polynom.h
Tests/: Test.txt  Test2.txt
